--- a/src/main/java/earpitch/gui/Training.fxml
+++ b/src/main/java/earpitch/gui/Training.fxml
@@ -6,17 +6,27 @@
 <?import earpitch.widget.keyboard.Keyboard?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 
 <Scene xmlns:fx="http://javafx.com/fxml">
 	<BorderPane>
+		<top>
+			<HBox id="header">
+				<Label id="logo" text="EarPitch" />
+			</HBox>
+		</top>
 		<center>
-			<VBox alignment="TOP_CENTER">
+			<VBox id="main" alignment="CENTER">
 				<Staff fx:id="staff" />
 				<Keyboard fx:id="keyboard" />			
 			</VBox>
 		</center>
-		<right>
-			<Button fx:id="playButton" text="Play" onAction="#play"/>
-		</right>
+		<bottom>
+			<HBox id="footer" alignment="CENTER">
+				<Button fx:id="playButton" text="Play" onAction="#play"/>
+				<Button fx:id="hintButton" text="Hint" onAction="#hint"/>
+			</HBox>
+		</bottom>
 	</BorderPane>
 </Scene>
