feat(Counter): add counter displaying number of correct and incorrect guesses

--- a/src/main/java/earpitch/gui/Training.css
+++ b/src/main/java/earpitch/gui/Training.css
@@ -6,11 +6,20 @@
 }
 
 #main {
-    -fx-spacing: 2em;
+	-fx-spacing: 4em;
+}
+
+#main Label {
+	-fx-background-color: black;
+}
+
+#counters {
+	-fx-spacing: 1em;
 }
 
 Button {
     -fx-font-size: 14pt;
+    -fx-padding: 1em;
 }
 
 #logo {
