feat(css): adjust styling

--- a/src/main/java/earpitch/gui/Training.css
+++ b/src/main/java/earpitch/gui/Training.css
@@ -1,29 +1,25 @@
 #header, #footer {
-	-fx-background-color: white;
     -fx-padding: 1.5em;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
     -fx-spacing: 1em;
-}
-
-#main {
-	-fx-spacing: 4em;
-}
-
-#main Label {
-	-fx-background-color: black;
+    -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color; 
+    -fx-background-insets: 0, 1, 2;
 }
 
 #counters {
+	-fx-padding: 3em;
+	-fx-spacing: 1em;
+}
+
+#options {
+	-fx-padding: 2em;
 	-fx-spacing: 1em;
 }
 
 Button {
-    -fx-font-size: 14pt;
+    -fx-font-size: 10pt;
     -fx-padding: 1em;
 }
 
 #logo {
-    -fx-font-family: "Arial Narrow";
-    -fx-font-weight: bold;
-    -fx-font-size: 16pt;
+    -fx-font-size: 14pt;
 }
